[package]
authors = ["Alex Eagleson <alexeagleson@gmail.com>"]
description = "Convert Rust types to Typescript types. This crate is meant as a teaching tool and not for production."
edition = "2021"
homepage = "https://github.com/alexeagleson/typester"
license = "MIT"
name = "typester"
readme = "README.md"
repository = "https://github.com/alexeagleson/typester"
rust-version = "1.63"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.8"
syn = {version = "1.0.101", features = ["full", "extra-traits"]}
